First pass on migrating iOS App to Authelia
